# CMakeAssignment

./: .gitignore  CMakeLists.txt  README.md  config.txt
Binaries/include/: address.h  userProfile.h
ClientApp/: CMakeLists.txt
ClientApp/src/: main.cpp
Common/: CMakeLists.txt
Common/include/common/: address.h  common.h  userProfile.h
Common/src/: address.cpp  common.cpp  userProfile.cpp
ServerApp/: CMakeLists.txt
ServerApp/src/: main.cpp
json-release-3.2.0/: .gitignore
